...
	};

	return (
		<SafeAreaView
			edges={["top"]}
			style={styles.container}
			testID="provider-schedule-screen"
		>
			<ScrollView
				style={styles.scrollView}
				contentContainerStyle={styles.scrollContent}
				showsVerticalScrollIndicator={false}
			>
				<ScreenHeader
					title={t("common.schedule")}
					subtitle={t("common.workingScheduleDescription")}
					icon={CalendarClock}
					backButtonTestID="provider-schedule-back-button"
					style={styles.screenHeader}
				/>

				<View style={styles.description}>
					<Text style={styles.descriptionText}>
						{t("common.setYourWorkingHoursForEachDayOfTheWeekPatientsWillOnlyBeAbleToBookAppointmentsDuringTheseTimes")}
...
